# assemble_app_rs

./: Cargo.toml  Readme.md
src/: lib.rs
